Changed somethings around; mostly with the top banner

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="./resources/css/reset.css">
+  <link rel="stylesheet" href="resources/css/reset.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 </head>
 <body>
   <!-- Header -->
@@ -15,7 +16,7 @@
         <ul>
           <li><a href="#">Product detail</a></li>
           <li><a href="#">About us</a></li>
-          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="./resources/images/instagram.png"></a></li>
+          <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="resources/images/instagram.png"/></a></li>
         </ul>
       </nav>
       <nav class="mobile">
